<?xml version="1.0"?>
<package format="2">
  <name>basketball_motion_controller_msgs</name>
  <version>0.0.0</version>
  <description>The basketball_motion_controller_msgs package</description>

  <maintainer email="himeno@jsk.imi.i.u-tokyo.ac.jp">Tomoya-Himeno</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rtmbuild2</depend>

</package>
