<?xml version="1.0"?>
<package format="2">
  <name>basketball_motion_controller_ros_bridge</name>
  <version>0.0.0</version>
  <description>The basketball_motion_controller_ros_bridge package</description>

  <maintainer email="himeno@jsk.imi.i.u-tokyo.ac.jp">Tomoya-Himeno</maintainer>

  <license>BSD</license>

  <author email="himeno@jsk.imi.i.u-tokyo.ac.jp">Tomoya-Himeno</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>basketball_motion_controller_msgs</depend>
  <depend>roscpp</depend>

</package>
